# a2a-python-kafka

./: .gitignore  A2A on Kafka.md  KAFKA_FIX_SUMMARY.md  KAFKA_IMPLEMENTATION_SUMMARY.md  README.md  docker-compose.kafka.yml  pyproject.toml  test_handler.py  test_simple_kafka.py
.github/workflows/: linter.yaml  python-publish.yml  unit-tests.yml  update-a2a-types.yml
docs/: kafka_transport.md
examples/: kafka_comprehensive_example.py  kafka_example.py  kafka_handler_example.py
scripts/: setup_kafka_dev.py
src/: kafka_chatopenai_demo.py  kafka_currency_demo.py  kafka_example.py
src/a2a/: types.py
src/a2a/client/: client_factory.py
src/a2a/client/transports/: __init__.py  kafka.py  kafka_correlation.py
src/a2a/server/apps/: __init__.py
src/a2a/server/apps/kafka/: __init__.py  app.py
src/a2a/server/request_handlers/: __init__.py  kafka_handler.py
tests/client/transports/: test_kafka.py
tests/server/tasks/: test_id_generator.py
